efk_svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    role: kibana
  name: kibana-mgmt-es-cluster
  namespace: operator
spec:
  ports:
  - port: 5601
    protocol: TCP
    targetPort: 5601
  selector:
    role: kibana
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
