efk_es_ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-passthrough: "true"
    kubernetes.io/ingress.class: haproxy
  name: mgmt-es-es
  namespace: operator
spec:
  rules:
  - host: efkes.mgmt.srv.da.nsn-rdnet.net
    http:
      paths:
      - backend:
          serviceName: elasticsearch-mgmt-es-cluster
          servicePort: 9200
status:
  loadBalancer:
    ingress:
    - {}
